--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Shelby County Democrats
 			<div class="fb-page" data-href="https://www.facebook.com/KYYoungDems" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/KYYoungDems"><a href="https://www.facebook.com/KYYoungDems">Kentucky Young Democrats</a></blockquote></div></div>
 		</div>
 		<div class="body-column"  id="twitter">
-			<a class="twitter-timeline" href="https://twitter.com/KyYoungDems" data-widget-id="629772324947009536">Tweets by @KyYoungDems</a>
+			<a class="twitter-timeline" href="https://twitter.com/shelbydemky" data-widget-id="629772324947009536">Tweets by @ShelbyCoDemParty</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>
 </div>
