update Facebook page plugin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Shelby County Democrats
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -36,7 +36,7 @@ title: Shelby County Democrats
   <a href="/news.html" id="read-more">Read More</a>
 	</div>
 		<div class="body-column"  id="facebook">
-			<div class="fb-page" data-href="https://www.facebook.com/KYYoungDems" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/KYYoungDems"><a href="https://www.facebook.com/KYYoungDems">Kentucky Young Democrats</a></blockquote></div></div>
+      <div class="fb-page" data-href="https://www.facebook.com/ShelbyCoKYDems" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ShelbyCoKYDems"><a href="https://www.facebook.com/ShelbyCoKYDems">Shelby County Kentucky Democratic Party</a></blockquote></div></div>
 		</div>
 		<div class="body-column"  id="twitter">
 			<a class="twitter-timeline" href="https://twitter.com/shelbydemky" data-widget-id="629772324947009536">Tweets by @ShelbyCoDemParty</a>
