--- a/links.html
+++ b/links.html
@@ -28,7 +28,7 @@ title: Links
       </ul>
     </div>
     <div class="link-list">
-      <h2>National Democratic Website</h2>
+      <h2>National Democratic Websites</h2>
       <ul>
         <li><a href="http://www.democrats.org/" target="_blank">Democratic National Committee (DNC)</a></li>
         <li><a href="http://www.dscc.org/" target="_blank">Democratic Senatorial Campaign Committee (DSCC)</a></li>
