--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@ title: Shelby County Democrats
   </ul>
   <a href="/news.html" id="read-more">Read More</a>
 	</div>
-		<div class="body-column"  id="facebook">
+	<div class="social-container">
+    <div class="body-column"  id="facebook">
       <div class="fb-page" data-href="https://www.facebook.com/ShelbyCoKYDems" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ShelbyCoKYDems"><a href="https://www.facebook.com/ShelbyCoKYDems">Shelby County Kentucky Democratic Party</a></blockquote></div></div>
 		</div>
 		<div class="body-column"  id="twitter">
 			<a class="twitter-timeline" href="https://twitter.com/shelbydemky" data-widget-id="629772324947009536">Tweets by @ShelbyCoDemParty</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>
+	</div>
 </div>
