--- a/officials.html
+++ b/officials.html
@@ -8,7 +8,7 @@ title: Elected Officials
     <h1> {{ page.title }} </h1>
   </div>
   {% for level in site.data.officials %}
-    <h2>{{ level.type }}</h2>
+    <h2 class="level-type">{{ level.type }}</h2>
     <ul class="official-container">
       {% for official in level.officials in %}
       <li class="official-box">
