--- a/candidates.html
+++ b/candidates.html
@@ -12,21 +12,26 @@ title: 2016 Democratic Candidates
       <img src="assets/img/candidates/{{ candidate.photo }}.jpg">
       <h2>{{ candidate.name }}</h2>
       <h3>{{ candidate.office }}</h3>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x twittercircle"></i>
-        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
-      </span>
-      <a href="http://{{ candidate.website }}">{{ candidate.website }}</a><br>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x facebookcircle"></i>
-        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-      </span>
-      <a href="https://www.facebook.com/{{ candidate.facebook }}">{{ candidate.facebook }}</a><br>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x twittercircle"></i>
-        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-      </span>
-      <a href="https://twitter.com/{{ candidate.twitter }}"> &#64;{{ candidate.twitter }}</a>
+      <ul class="icons">
+        <li class="icons-link"><a class="icons" href="http://{{ candidate.website }}">
+          <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x twittercircle"></i>
+          <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+          </span>
+        </a></li>
+        <li class="icons-link"><a class="icons" href="https://www.facebook.com/{{ candidate.facebook }}">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x facebookcircle"></i>
+            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+          </span>
+        </a></li>
+        <li class="icons-link"><a class="icons" href="https://twitter.com/{{ candidate.twitter }}">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x twittercircle"></i>
+            <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+          </span>
+        </a></li>
+      </ul>
     </li>
   {% endfor %}
   </ul>
