Posts css changes

--- a/news.html
+++ b/news.html
@@ -3,9 +3,9 @@ layout: default
 title: News
 ---
 
-<div class="content-container" id="posts-column">
+<div class="content-container">
   <div class="page-title"><h1>{{ page.title }}</h1></div>
-  <ul class="posts">
+  <ul class="news-posts">
   {% for post in site.posts %}
     <li>
 				<h3><a href="{{ post.url}}">{{ post.title }}</a></h3>
