Replace form spree with mail chimp / CSS and HTML

--- a/volunteer.html
+++ b/volunteer.html
@@ -7,40 +7,58 @@ title: Volunteer
   <div class="page-title"><h1>{{ page.title }}</h1></div>
   <p id="title-info">Fill this form out to receive information on how you can help the Shelby County Democratic Party!</p>
   <div class="form-body">
-    <form class="contact-form" action="//formspree.io/shelbycokydems@gmail.com" method="POST">
-      <input type="hidden" name="_subject" value="New Volunteer Info!" />
-      <input type="text" name="_gotcha" style="display:none" />
-      <div class="form-input required">
-        Name <span class="required-asterisk">*</span><br>
-        <input type="text" name="name" required><br>
-      </div>
-      <div class="form-input required">
-        Email <span class="required-asterisk">*</span><br>
-        <input type="email" name="email" required><br>
-      </div>
-      <div class="form-input required">
-        City <span class="required-asterisk">*</span><br>
-        <input type="text" name="city" required><br>
-      </div>
-      <div class="form-input required">
-        Zip Code <span class="required-asterisk">*</span><br>
-        <input type="text" name="zipcode" required></br>
-      </div>
-      <div class="form-input">
-        Phone Number <br>
-        <input type="tel" name="phone"><br>
-      </div>
-      <div class="form-input">
-        I'm Interested In <br>
-        <span class="form-paran">(Check one or more boxes)</span><br>
-        <div class="form-checkbox">
-          <input type="checkbox" id="get-involved" name="get-involved">&nbsp;<label for="get-involved">Getting Involved</label><br>
-          <input type="checkbox" id="volunteer" name="volunteer">&nbsp;<label for="volunteer">Volunteering</label><br>
-          <input type="checkbox" id="other" name="other">&nbsp;<label for="other">Other</label><br>
+    <div id="mc_embed_signup">
+    <form action="//shelbycokydems.us13.list-manage.com/subscribe/post?u=d253237f5f7fe430614952a44&amp;id=7cfafe06a7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate contact-form" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+
+    <div class="mc-field-group form-input required">
+    	<label for="mce-NAME">Name  <span class="required-asterisk">*</span>
+    </label>
+    	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
+    </div>
+
+    <div class="mc-field-group form-input required">
+    	<label for="mce-EMAIL">Email Address  <span class="required-asterisk">*</span>
+    </label>
+    	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+    </div>
+
+    <div class="mc-field-group form-input required">
+    	<label for="mce-CITY">City  <span class="required-asterisk">*</span>
+    </label>
+    	<input type="text" value="" name="CITY" class="required" id="mce-CITY">
+    </div>
+
+    <div class="mc-field-group form-input required">
+    	<label for="mce-ZIPCODE">Zip Code  <span class="required-asterisk">*</span>
+    </label>
+    	<input type="text" value="" name="ZIPCODE" class="required" id="mce-ZIPCODE">
+    </div>
+
+    <div class="mc-field-group form-input">
+    	<label for="mce-PHONE">Phone Number </label><br>
+    	<input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+    </div>
+
+    <div class="mc-field-group input-group form-input">
+      <strong>I'm Interested In </strong>
+      <ul>
+        <li><input type="checkbox" value="1" name="group[3545][1]" id="mce-group[3545]-3545-0"><label for="mce-group[3545]-3545-0">&nbsp;Getting Involved</label></li>
+        <li><input type="checkbox" value="2" name="group[3545][2]" id="mce-group[3545]-3545-1"><label for="mce-group[3545]-3545-1">&nbsp;Volunteering</label></li>
+        <li><input type="checkbox" value="4" name="group[3545][4]" id="mce-group[3545]-3545-2"><label for="mce-group[3545]-3545-2">&nbsp;Other</label></li>
+      </ul>
+    </div>
+
+    	<div id="mce-responses" class="clear">
+    		<div class="response" id="mce-error-response" style="display:none"></div>
+    		<div class="response" id="mce-success-response" style="display:none"></div>
+    	</div>
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d253237f5f7fe430614952a44_7cfafe06a7" tabindex="-1" value=""></div>
+        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button form-submit"></div>
         </div>
-      </div>
-      <button type="submit" class="form-submit">Submit</button>
     </form>
+    </div>
+
   </div>
 </div>
 
