--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ title: Contact Us
 
 <div class="content-container">
   <div class="page-title"><h1>{{ page.title }}</h1></div>
-  <p id="title-info">Fill this form out to receive information on how you can help the Shelby County Democratic Party!</p>
+  <p id="title-info">Fill this form out if you have any questions about the Shelby County Democratic Party and we'll get right back to you!</p>
   <div class="form-body">
     <form class="contact-form" action="//formspree.io/shelbycokydems@gmail.com" method="POST">
       <input type="hidden" name="_subject" value="New Contact Message!" />
