--- a/special.html
+++ b/special.html
@@ -1,44 +1,22 @@
 ---
 layout: default
-title: Martha Layne Collins Dinner
+title: Summer Picnic with the Democratic Party
 ---
 
 <div class="special-hero">
   <div class="special-tint" id="hero-text">
     <p id="special-title">{{ page.title}}<p>
-    <p id="special-details">Monday, April 11th, 2016 <br>
-    Claudia Sanders Dinner House <br>
-    3202 Shelbyville Road <br>
+    <p id="special-details">Sunday, July 24th, 2016 <br>
+    Clear Creek Park <br>
+    Colonel Sanders Shelter <br>
     Shelbyville, KY 40065</p>
   </div>
 </div>
 <div class="content-container special-container">
-  <div id="speakers">
-    <p>Keynote Speaker: Congressman John Yarmuth</p>
-    <p>Master of Ceremonies: Adam Edelen</p>
-  </div>
   <div class="info-container">
-    <div class="info">
-      All 2016 U.S. Senate, 4th Congressional District, and 58th State House District Democratic candidates have been invited to speak!
-    </div>
-    <div class="info"><em>Come support the Shelby County Democratic Party and meet your 2016 Democratic Candidates!</em></div>
-    <div class="info">
-      Cash bar opens at 5:30 p.m. <br>
-      Dinner begins at 6:30 p.m. <br>
-      Speakers start at 7:00 p.m.
-    </div>
-    <div class="info">
-      Tickets: $40.00 <br>
-      Young Democrats: $25.00 <br>
-      Table (seats 8): $300.00
-    </div>
-    <div class="info">
-      Please RSVP by April 6th to: <br>
-      Cindy Green at <a href="&#109&#097&#105&#108&#116&#111&#058&#99;&#116;&#103;&#114;&#101;&#101;&#110;&#64;&#116;&#119;&#99;&#46;&#99;&#111;&#109;">&#99;&#116;&#103;&#114;&#101;&#101;&#110;&#64;&#116;&#119;&#99;&#46;&#99;&#111;&#109;</a> or 502-633-3135 <br>
-        Make checks payable to "Shelby County Democratic Party" and mail to: <br>
-        P.O. Box 1266 <br>
-        Shelbyville, KY 40066
-    </div>
-    <div class="info"><strong>If you cannot attend please consider donating to the local party, purchasing a ticket for a Young Democrat, or sponsoring a table!</strong></div>
+    <div class="info">You are invited to the annual Summer Picnic hosted by the Shelby County Democratic Party. We will be meeting at the Colonel Sanders Shelter located at Gate 3, the first shelter on left past the softball fields.</div>
+    <div class="info">Food is provided for free so bring the whole Family!</div>
+    <div class="info"><em>All of your Kentucky Democratic Candidates have been invited!</em></div>
+    <div class="info">Bring the family to share in some good food and great fellowship. Meet your 2016 Democratic Candidates for U.S. Senate, Congress, State Representative, and Shelbyville City Council!</div>
   </div>
 </div>
