--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ title: Shelby County Democrats
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div id="special">
-  <a href="/special.html">You are invited to the Shelby County Democratic Party Annual Picnic!</a>
-</div>
+<!-- <div id="special">
+  <a href="/special.html"></a>
+</div> -->
 <div id="hero-image">
   <!-- "Gallrein Farm" by Pen Waggener is licensed under CC BY 2.0/ Cropped from Original/ taken from "https://www.flickr.com/photos/epw/1472117143/in/photolist-5rNLJE-9SjzPC-dYEz4B-9SgHRT-3f5Z94-ctw9FS" -->
   <div id="hero-text">
@@ -21,6 +21,7 @@ title: Shelby County Democrats
     Everyone <br>
     Forward
   </div>
+  <div class="pic-detail"><a href="https://www.flickr.com/photos/epw/">Pen Waggener</a></div>
 </div>
 	{% include signup.html %}
 <div id="home">
