--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Shelby County Democrats
 <div id="home">
 	<div class="body-column" id="posts-column">
 	  <ul class="posts">
-    {% for post in site.posts %}
+    {% for post in site.posts limit:2 %}
       <li>
 				<h3><a href="{{ post.url}}">{{ post.title }}</a></h3>
 				<span>{{ post.date | date: '%B %-d, %Y' }}</span>
