--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ title: Contact Us
         Message<br>
         <textarea name="message" required></textarea><br>
       </div>
-      <button type="submit" class="form-submit">Submit</button>
+      <button type="submit" class="form-submit box-highlight">Submit</button>
     </form>
   </div>
 </div>
