--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Shelby County Democrats
 			<hr>
     {% endfor %}
   </ul>
-  <a href="/news.html" id="read-more">Read More</a>
+  <a href="/news.html" class="box-highlight read-more" id="read-more">Read More</a>
 	</div>
 	<div class="social-container">
     <div class="body-column"  id="facebook">
