--- a/volunteer.html
+++ b/volunteer.html
@@ -54,7 +54,7 @@ title: Volunteer
     		<div class="response" id="mce-success-response" style="display:none"></div>
     	</div>
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d253237f5f7fe430614952a44_7cfafe06a7" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button form-submit"></div>
+        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button form-submit box-highlight"></div>
         </div>
     </form>
     </div>
