--- a/special.html
+++ b/special.html
@@ -1,22 +1,38 @@
 ---
 layout: default
-title: Summer Picnic with the Democratic Party
+title: Governor Martha Layne Collins Dinner
 ---
 
 <div class="special-hero">
-  <div class="special-tint" id="hero-text">
-    <p id="special-title">{{ page.title}}<p>
-    <p id="special-details">Sunday, July 24th, 2016 <br>
-    Clear Creek Park <br>
-    Colonel Sanders Shelter <br>
+  <div class="heroimage__text heroimage__text--special">
+    <p class="special__title">{{ page.title}}<p>
+    <p class="special__details">Friday, June 9th, 2017 <br>
+    Claudia Sanders Dinner House <br>
+    3202 Shelbyville Road <br>
     Shelbyville, KY 40065</p>
   </div>
 </div>
 <div class="content-container special-container">
   <div class="info-container">
-    <div class="info">You are invited to the annual Summer Picnic hosted by the Shelby County Democratic Party. We will be meeting at the Colonel Sanders Shelter located at Gate 3, the first shelter on left past the softball fields.</div>
-    <div class="info">Food is provided for free so bring the whole Family!</div>
-    <div class="info"><em>All of your Kentucky Democratic Candidates have been invited!</em></div>
-    <div class="info">Bring the family to share in some good food and great fellowship. Meet your 2016 Democratic Candidates for U.S. Senate, Congress, State Representative, and Shelbyville City Council!</div>
+    <div class="info"><em>Come join us and help support the Shelby County Democratic Party!</em></div>
+    <div class="info">
+      Cash bar opens at 5:30 p.m. <br>
+      Dinner begins at 6:30 p.m. <br>
+      Panel Discussion starts at 7:00 p.m.
+    </div>
+    <div class="info">Tickets: $40.00 <br>
+      Young Democrats: $25.00 <br>
+      Table (seats 8): $300.00
+    </div>
+    <div class="info">
+      You can purchase tickets online here: <br>
+      <a class="box-highlight" href="https://secure.actblue.com/contribute/page/marthalaynecollinsdinner">Purchase Tickets</a>
+    </div>
+    <div class="info">
+        Make checks payable to "Shelby County Democratic Party" and mail to: <br>
+        P.O. Box 1266 <br>
+        Shelbyville, KY 40066
+    </div>
+    <div class="info"><strong>If you cannot attend please consider donating to the local party, purchasing a ticket for a Young Democrat, or sponsoring a table!</strong></div>
   </div>
 </div>
