--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@ title: Shelby County Democrats
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<!-- <div id="special">
-  <a href="/special.html"></a>
-</div> -->
-<div id="hero-image">
+<div id="special">
+  <a href="/special.html">You are invited to the 3rd annual Governor Martha Layne Collins Dinner</a>
+</div>
+<div class="heroimage">
   <!-- "Gallrein Farm" by Pen Waggener is licensed under CC BY 2.0/ Cropped from Original/ taken from "https://www.flickr.com/photos/epw/1472117143/in/photolist-5rNLJE-9SjzPC-dYEz4B-9SgHRT-3f5Z94-ctw9FS" -->
-  <div id="hero-text">
+  <div class="heroimage__text">
     Moving <br>
     Everyone <br>
     Forward
   </div>
-  <div class="pic-detail"><a href="https://www.flickr.com/photos/epw/">Pen Waggener</a></div>
 </div>
 	{% include signup.html %}
-<div id="home">
-	<div class="body-column" id="posts-column">
+<div class="content-container">
+	<div class="body-column body-column--posts">
 	  <ul class="posts">
     {% for post in site.posts limit:2 %}
       <li>
@@ -39,10 +38,10 @@ title: Shelby County Democrats
   <a href="/news.html" class="box-highlight read-more" id="read-more">Read More</a>
 	</div>
 	<div class="social-container">
-    <div class="body-column"  id="facebook">
+    <div class="body-column--social">
       <div class="fb-page" data-href="https://www.facebook.com/ShelbyCoKYDems" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ShelbyCoKYDems"><a href="https://www.facebook.com/ShelbyCoKYDems">Shelby County Kentucky Democratic Party</a></blockquote></div></div>
 		</div>
-		<div class="body-column"  id="twitter">
+		<div class="body-column--social">
       <a class="twitter-timeline" href="https://twitter.com/shelbydemky" data-widget-id="711670710410878976">Tweets by @shelbydemky</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>
