Quick add for donate error -- will be removed soon

--- a/special.html
+++ b/special.html
@@ -26,7 +26,8 @@ title: Governor Martha Layne Collins Dinner
     </div>
     <div class="info">
       You can purchase tickets online here: <br>
-      <a class="box-highlight" href="https://secure.actblue.com/contribute/page/marthalaynecollinsdinner">Purchase Tickets</a>
+      <!-- <a class="box-highlight" href="https://secure.actblue.com/contribute/page/marthalaynecollinsdinner">Purchase Tickets</a> -->
+      <a class="box-highlight" href="/donate.html">Purchase Tickets</a>
     </div>
     <div class="info">
         Make checks payable to "Shelby County Democratic Party" and mail to: <br>
