removed donate error and made changes to special text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Shelby County Democrats
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <div id="special">
-  <a href="/special.html">You are invited to the 3rd annual Governor Martha Layne Collins Dinner</a>
+  <a href="/special.html">Purchase Tickets for the 3rd Annual Governor Martha Layna Collins Dinner HERE</a>
 </div>
 <div class="heroimage">
   <!-- "Gallrein Farm" by Pen Waggener is licensed under CC BY 2.0/ Cropped from Original/ taken from "https://www.flickr.com/photos/epw/1472117143/in/photolist-5rNLJE-9SjzPC-dYEz4B-9SgHRT-3f5Z94-ctw9FS" -->
