--- a/special.html
+++ b/special.html
@@ -10,6 +10,9 @@ title: Governor Martha Layne Collins Dinner
     Claudia Sanders Dinner House <br>
     3202 Shelbyville Road <br>
     Shelbyville, KY 40065</p>
+    <p class="special__details">
+      <a href="https://secure.actblue.com/contribute/page/marthalaynecollinsdinner">PURCHASE TICKETS</a>
+    </p>
   </div>
 </div>
 <div class="content-container special-container">
@@ -20,14 +23,23 @@ title: Governor Martha Layne Collins Dinner
       Dinner begins at 6:30 p.m. <br>
       Panel Discussion starts at 7:00 p.m.
     </div>
+    <div class="info">
+      Keynote Speaker: Attorney General Andy Beshear<br>
+      Emcee: Colmon Elridge<br><br>
+
+      Panel Discussion to follow with:<br>
+      Honorable Attica Scott - State Representative<br>
+      Juan Pena - KY Human Rights Commission<br>
+      Adrian Wallace - Lexington NAACP President<br>
+      Sellus Wilder - 2016 U.S. Senate Candidate<br>
+    </div>
     <div class="info">Tickets: $40.00 <br>
       Young Democrats: $25.00 <br>
       Table (seats 8): $300.00
     </div>
     <div class="info">
       You can purchase tickets online here: <br>
-      <!-- <a class="box-highlight" href="https://secure.actblue.com/contribute/page/marthalaynecollinsdinner">Purchase Tickets</a> -->
-      <a class="box-highlight" href="/donate.html">Purchase Tickets</a>
+      <a class="box-highlight" href="https://secure.actblue.com/contribute/page/marthalaynecollinsdinner">Purchase Tickets</a>
     </div>
     <div class="info">
         Make checks payable to "Shelby County Democratic Party" and mail to: <br>
