--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@ title: Links
       <ul>
         <li><a href="http://kydemocrat.com/" target="_blank">Kentucky Democratic Party</a></li>
         <li><a href="http://www.kyyoungdems.com/" target="_blank">Kentucky Young Democrats</a></li>
-        <li><a href="http://www.louisvilledem.com/" target="_blank">Louisville-Jefferson County Democratic Party</a></li>
+        <li><a href="http://www.louisvilledems.com/" target="_blank">Louisville Democratic Party</a></li>
         <li><a href="http://fayettedemocrats.net/" target="_blank">Fayette County Democratic Party</a></li>
       </ul>
     </div>
