added candidiate pic and Collins Dinner info

--- a/special.html
+++ b/special.html
@@ -6,7 +6,7 @@ title: Governor Martha Layne Collins Dinner
 <div class="special-hero">
   <div class="heroimage__text heroimage__text--special">
     <p class="special__title">{{ page.title}}<p>
-    <p class="special__details">Friday, June 9th, 2017 <br>
+    <p class="special__details">Friday, April 13th, 2018 <br>
     Claudia Sanders Dinner House <br>
     3202 Shelbyville Road <br>
     Shelbyville, KY 40065</p>
@@ -19,23 +19,17 @@ title: Governor Martha Layne Collins Dinner
   <div class="info-container">
     <div class="info"><em>Come join us and help support the Shelby County Democratic Party!</em></div>
     <div class="info">
-      Cash bar opens at 5:30 p.m. <br>
+      Meet and Greet begins at 5:00 p.m. <br>
+      Seating beings at 6:00 p.m. <br>
       Dinner begins at 6:30 p.m. <br>
-      Panel Discussion starts at 7:00 p.m.
+      Program starts at 7:00 p.m.
     </div>
     <div class="info">
-      Keynote Speaker: Attorney General Andy Beshear<br>
-      Emcee: Colmon Elridge<br><br>
-
-      Panel Discussion to follow with:<br>
-      Honorable Attica Scott - State Representative<br>
-      Juan Pena - KY Human Rights Commission<br>
-      Adrian Wallace - Lexington NAACP President<br>
-      Sellus Wilder - 2016 U.S. Senate Candidate<br>
     </div>
-    <div class="info">Tickets: $40.00 <br>
-      Young Democrats: $25.00 <br>
-      Table (seats 8): $300.00
+    <div class="info">Tickets: $50.00 <br>
+      Meet and Greet: $10.00 <br>
+      Table (seats 8): $350.00 <br>
+      Sponsor a Young Democrat: $50.00
     </div>
     <div class="info">
       You can purchase tickets online here: <br>
