update collins dinner event

--- a/collinsdinner.html
+++ b/collinsdinner.html
@@ -6,7 +6,7 @@ title: Governor Martha Layne Collins Dinner
 <div class="special-hero">
   <div class="heroimage__text heroimage__text--special">
     <p class="special__title">{{ page.title}}<p>
-    <p class="special__details">Friday, April 13th, 2018 <br>
+    <p class="special__details">Friday, May 10th, 2019 <br>
     Claudia Sanders Dinner House <br>
     3202 Shelbyville Road <br>
     Shelbyville, KY 40065</p>
@@ -19,17 +19,17 @@ title: Governor Martha Layne Collins Dinner
   <div class="info-container">
     <div class="info"><em>Come join us and help support the Shelby County Democratic Party!</em></div>
     <div class="info">
-      Meet and Greet begins at 5:00 p.m. <br>
-      Seating beings at 6:00 p.m. <br>
+      Doors Open at 6:00 p.m. <br>
       Dinner begins at 6:30 p.m. <br>
       Program starts at 7:00 p.m.
     </div>
     <div class="info">
+      All 2019 Democratic Candidates are invited to speak.<br>
+      There will be a Silent Auction and Cash Bar.
     </div>
-    <div class="info">Tickets: $50.00 <br>
-      Meet and Greet: $10.00 <br>
-      Table (seats 8): $350.00 <br>
-      Sponsor a Young Democrat: $50.00
+    <div class="info">Tickets: $55.00 <br>
+      Ticket at Door: $60.00 <br>
+      Table (seats 8): $400.00 <br>
     </div>
     <div class="info">
       You can purchase tickets online here: <br>
